@@ -9,8 +9,14 @@ require_once __DIR__ . "/functions.php";
 require findVendorDirectory() . "/autoload.php";
 
 $cmd = new Parser("", [
-  "--source" => [Parser::REALPATH => true, Parser::VALUE => NULL, Parser::ARGUMENT => true],
-  "--output" => [Parser::VALUE => NULL, Parser::ARGUMENT => true],
+  "--source" => [
+    Parser::REALPATH => true, Parser::VALUE => findVendorDirectory() . "/../",
+    Parser::ARGUMENT => true,
+  ],
+  "--output" => [
+    Parser::VALUE => findVendorDirectory() . "/../public/",
+    Parser::ARGUMENT => true,
+  ],
 ]);
 $options = $cmd->parse();
 
