@@ -2,6 +2,7 @@ Version 0.2.0+dev
 - raised minimal version of PHP to 7.1
 - added dependency on symfony/options-resolver
 - it is now possible to include stylesheets and scripts in generated pages
+- Generator no longer tries to guess source and output folders
 
 Version 0.2.0
 - raised minimal version of PHP to 7
